# nova-protocol

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LESSONS.md  README.md  Trunk.toml  about.hbs  about.toml  blog.js  flake.nix  index.html  index.js  news.js  node_modules_mermaid-js_parser_dist_chunks_mermaid-parser_core_architecture-TIHT7OUA_mjs.js  node_modules_mermaid-js_parser_dist_chunks_mermaid-parser_core_cynefin-VYW2F7L2_mjs.js  node_modules_mermaid-js_parser_dist_chunks_mermaid-parser_core_eventmodeling-45OFAUF4_mjs.js  node_modules_mermaid-js_parser_dist_chunks_mermaid-parser_core_gitGraph-TEB2WS4Q_mjs.js  node_modules_mermaid-js_parser_dist_chunks_mermaid-parser_core_info-DKCQHKI2_mjs.js  node_modules_mermaid-js_parser_dist_chunks_mermaid-parser_core_packet-7NZHBO7P_mjs.js  node_modules_mermaid-js_parser_dist_chunks_mermaid-parser_core_pie-RZYD4A2V_mjs.js  node_modules_mermaid-js_parser_dist_chunks_mermaid-parser_core_radar-I7S5WNFK_mjs.js  node_modules_mermaid-js_parser_dist_chunks_mermaid-parser_core_railroad-3IZDKUUU_mjs.js  node_modules_mermaid-js_parser_dist_chunks_mermaid-parser_core_railroad-abnf-AHOZXSZD_mjs.js  node_modules_mermaid-js_parser_dist_chunks_mermaid-parser_core_railroad-ebnf-EBAXGLYW_mjs.js  node_modules_mermaid-js_parser_dist_chunks_mermaid-parser_core_railroad-peg-LSFZ7HO6_mjs.js  node_modules_mermaid-js_parser_dist_chunks_mermaid-parser_core_treeView-QDETBFTQ_mjs.js  node_modules_mermaid-js_parser_dist_chunks_mermaid-parser_core_treemap-6X3UGDF4_mjs.js  node_modules_mermaid-js_parser_dist_chunks_mermaid-parser_core_wardley-OPB4EBWU_mjs.js  node_modules_mermaid_dist_chunks_mermaid_core_abnfDiagram-VRR7QNED_mjs.js  node_modules_mermaid_dist_chunks_mermaid_core_classDiagram-OUVF2IWQ_mjs.js  node_modules_mermaid_dist_chunks_mermaid_core_classDiagram-v2-EOCWNBFH_mjs.js  node_modules_mermaid_dist_chunks_mermaid_core_diagram-NH7WQ7WH_mjs.js  node_modules_mermaid_dist_chunks_mermaid_core_ebnfDiagram-CCIWWBDH_mjs.js  node_modules_mermaid_dist_chunks_mermaid_core_flowDiagram-23GEKE2U_mjs.js  node_modules_mermaid_dist_chunks_mermaid_core_infoDiagram-FWYZ7A6U_mjs.js  node_modules_mermaid_dist_chunks_mermaid_core_pegDiagram-2B236MQR_mjs.js  node_modules_mermaid_dist_chunks_mermaid_core_railroadDiagram-RFXS5EU6_mjs.js  node_modules_mermaid_dist_chunks_mermaid_core_sizeCapture-X5ZJPWSS_mjs.js  node_modules_mermaid_dist_chunks_mermaid_core_stateDiagram-v2-6OUMAXLB_mjs.js  (+48 more)
crates/nova_assets/: Cargo.toml  balance_acks.ron
crates/nova_assets/src/: balance.rs  content_report.rs  lib.rs  mod_cache.rs  mod_prefs.rs  mod_refs.rs  portal.rs  scenario.rs  sections.rs
crates/nova_assets/src/scenario/: broadside.rs  cast.rs  craft.rs  final_tally.rs  lifeline.rs  menu.rs  pacing.rs  shakedown.rs
crates/nova_assets/tests/: arena_combat.rs  balance_audit_gate.rs  broadside_assault.rs  content_lint_gate.rs  content_report_gate.rs  content_ron_parity.rs  cubemap_meta.rs  demo_scenario.rs  example_scenario.rs  final_tally_claim.rs  gauntlet_course.rs  gauntlet_race.rs  gen_portal_gate.rs  ledger_ch2_encounter.rs  ledger_ch3_channel.rs  ledger_ch4_ending.rs  ledger_ch5_raid.rs  ledger_skybox.rs  lifeline_convoy.rs  mod_binary_resources.rs  mod_cache_install.rs  portal_install.rs  scenario_ron_parity.rs  sections_ron_parity.rs  webmods_validation.rs
crates/nova_core/: Cargo.toml
crates/nova_core/src/: core.rs  lib.rs
crates/nova_core/tests/: cubemap_meta_app_config.rs
crates/nova_debug/: Cargo.toml
crates/nova_debug/src/: gravity.rs  harness.rs  lib.rs  perf.rs  screenshot.rs  sections.rs
crates/nova_editor/: Cargo.toml
crates/nova_editor/src/: config.rs  keybind.rs  lib.rs  placement.rs  scenario.rs
crates/nova_editor/src/ui/: card.rs  drawer.rs  mod.rs  rail.rs  theme.rs  tooltip.rs  widget.rs
crates/nova_events/: Cargo.toml
crates/nova_events/src/: lib.rs
crates/nova_gameplay/: Cargo.toml
crates/nova_gameplay/src/: asset_ref.rs  audio.rs  beacon.rs  camera_controller.rs  damage.rs  flight.rs  game_object.rs  gravity.rs  juice.rs  lib.rs  objective_marker.rs  plugin.rs  relations.rs  settings.rs
crates/nova_gameplay/src/hud/: ammo_readout.rs  beacon_chips.rs  comms_panel.rs  component_lock.rs  edge_indicators.rs  flight_status.rs  health.rs  holo_instruments.rs  item_highlights.rs  keybind_hints.rs  lock_crosshairs.rs  lock_dwell_ring.rs  maneuver_instruments.rs  mod.rs  objective_feedback.rs  objective_markers.rs  objectives.rs  readout.rs  screen_indicator.rs  target_candidates.rs  target_inset.rs  torpedo_target.rs  turret_lead.rs  velocity.rs
crates/nova_gameplay/src/input/: ai.rs  mod.rs  player.rs  reference.rs  targeting.rs
crates/nova_gameplay/src/integrity/: blast.rs  components.rs  explode.rs  glue.rs  mod.rs  plugin.rs  test_support.rs
crates/nova_gameplay/src/sections/: ammo.rs  base_section.rs  controller_section.rs  damage_tint.rs  hull_section.rs  mod.rs  projectile_hooks.rs  thruster_section.rs  torpedo_section.rs  turret_section.rs
crates/nova_menu/: Cargo.toml
crates/nova_menu/src/: lib.rs  settings_store.rs
crates/nova_meta_gen/: Cargo.toml
crates/nova_meta_gen/src/: lib.rs  main.rs
crates/nova_mod_format/: Cargo.toml
crates/nova_mod_format/src/: deps.rs  lib.rs
crates/nova_modding/: Cargo.toml
crates/nova_modding/src/: lib.rs
crates/nova_perf/: Cargo.toml
crates/nova_perf/src/: lib.rs
crates/nova_portal_gen/: Cargo.toml
crates/nova_portal_gen/src/: lib.rs  main.rs
crates/nova_portal_gen/tests/: generate.rs
crates/nova_probe/: Cargo.toml
crates/nova_probe/src/: aggregate.rs  capture.rs  catalog.rs  invariants.rs  lib.rs  profile.rs  recorder.rs  report.rs  run_report.rs  stats.rs
crates/nova_scenario/: Cargo.toml
crates/nova_scenario/benches/: scenario_dispatch.rs
crates/nova_scenario/src/: actions.rs  events.rs  filters.rs  lib.rs  lint.rs  loader.rs  render_scale.rs  variables.rs  world.rs
crates/nova_scenario/src/objects/: area.rs  asteroid.rs  mod.rs  (+5 more)
crates/nova_scenario/tests/: skybox_swap_e2e.rs
crates/nova_ui/: Cargo.toml
crates/nova_ui/src/: lib.rs  theme.rs  widget.rs
(+2309 files in other folders)
