[package]
name = "nova-protocol"
version = { workspace = true }
edition = { workspace = true }
authors = ["jercan_alex27@yahoo.com"]
license = "MIT"
homepage = "https://github.com/alexjercan/nova-protocol"
description = "A 3D space shooter game made with Bevy"
categories = ["games"]
exclude = ["dist", "build", "assets", "credits"]

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
nova_core = { path = "crates/nova_core" }

[dev-dependencies]
avian3d = { version = "0.4" }
bevy = { version = "0.17.2", features = ["experimental_bevy_ui_widgets"] }
bevy_rand = { version = "0.12.1", default-features = false, features = ["rand_chacha", "wyrand"] }
rand = { version = "0.9.2" }
serde = { version = "1.0.228" }
bevy_enhanced_input = { version = "0.19.0" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[build-dependencies]
embed-resource = "1"

[features]
debug = ["nova_core/debug", "bevy/track_location"]
dev = ["debug"]

[workspace.lints.rust]
# dead_code = "allow"
# unused_variables = "allow"
# unused_imports = "allow"

[workspace.lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

[workspace.package]
edition = "2021"
version = "0.3.0"

[workspace]
members = [
  "crates/bevy_common_systems",
  "crates/nova_assets",
  "crates/nova_core",
  "crates/nova_debug",
  "crates/nova_events",
  "crates/nova_gameplay",
  "crates/nova_info",
  "crates/nova_scenario",
]
resolver = "2"
