[package]
name = "nova-protocol"
version = { workspace = true }
edition = { workspace = true }
authors = ["jercan_alex27@yahoo.com"]
license = "MIT"
homepage = "https://github.com/alexjercan/nova-protocol"
description = "A 3D space shooter game made with Bevy"
categories = ["games"]
exclude = ["dist", "build", "assets", "credits"]
# Not published to crates.io (this is the game binary); also marks it first-party
# so cargo-about's `[private] ignore` keeps it out of the third-party manifest.
publish = false

[lib]
path = "src/lib.rs"

# Inherit the workspace clippy allows (type_complexity, too_many_arguments) for
# the root package too, so the lib, binary and examples match the crates' policy.
[lints]
workspace = true

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
nova_core = { path = "crates/nova_core" }

[dev-dependencies]
avian3d = { version = "0.7" }
bevy = { version = "0.19.0" }
# The 20_perf_baseline example uses the frame-time capture harness, which lives
# in nova_perf (a dev tool, not shipped with the game binary).
nova_perf = { path = "crates/nova_perf" }
bevy_rand = { version = "0.15.0", default-features = false, features = ["chacha20", "wyrand"] }
rand = { version = "0.10.2" }
serde = { version = "1.0.228" }
bevy_enhanced_input = { version = "0.26.0" }
# The screenshot-reel example embeds and parses its scenario RON directly
# (examples/data/reel.content.ron) instead of shipping it as a mod.
nova_modding = { path = "crates/nova_modding" }
ron = { version = "0.12" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
# Keep `cargo test`/`--all-targets` peak RAM down: cargo links one Bevy+avian binary per
# target (lib unittest + every example + doctests), and embedded DWARF makes each ~1.5 GB,
# so parallel rust-lld jobs can peak near 40 GB and swap-thrash a 32 GB box. Leaving DWARF
# in the .o files and keeping only line tables drops the peak to roughly half of RAM while
# preserving panic backtraces. See ../bevy-common-systems/docs/2026-07-03-test-memory.md.
split-debuginfo = "unpacked"
debug = "line-tables-only"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[build-dependencies]
embed-resource = "1"

[features]
debug = ["nova_core/debug", "bevy/track_location"]
dev = ["debug"]

[workspace.lints.rust]
# dead_code = "allow"
# unused_variables = "allow"
# unused_imports = "allow"

[workspace.lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

[workspace.package]
edition = "2021"
version = "0.7.0"
license = "MIT"

[workspace]
members = [
  "crates/nova_assets",
  "crates/nova_core",
  "crates/nova_debug",
  "crates/nova_editor",
  "crates/nova_events",
  "crates/nova_gameplay",
  "crates/nova_info",
  "crates/nova_menu",
  "crates/nova_mod_format",
  "crates/nova_meta_gen",
  "crates/nova_modding",
  "crates/nova_perf",
  "crates/nova_portal_gen",
  "crates/nova_scenario",
  "crates/nova_ui",
]
resolver = "2"
