[package]
name = "nova-protocol"
version = { workspace = true }
edition = { workspace = true }
authors = ["jercan_alex27@yahoo.com"]
license = "MIT"
homepage = "https://github.com/alexjercan/nova-protocol"
description = "A 3D space shooter game made with Bevy"
categories = ["games"]
exclude = ["dist", "build", "assets", "credits"]
# Not published to crates.io (this is the game binary); also marks it first-party
# so cargo-about's `[private] ignore` keeps it out of the third-party manifest.
publish = false
# The examples live in category subdirectories (bevy-repo style: purpose dirs,
# plain slug names), which cargo's auto-discovery cannot see - it only looks at
# examples/*.rs and examples/*/main.rs. Discovery off makes the [[example]]
# catalog below the SINGLE source of truth: a stray file can never become a
# phantom target, and a missing block means the example does not build at all
# (the catalog_matches_disk test in tests/examples_smoke.rs pins catalog ==
# disk == smoke lists). Task 20260719-193728.
autoexamples = false

[lib]
path = "src/lib.rs"

# nova_probe tool config (read by `crates/nova_probe`, ignored by cargo).
# fps_exempt: examples that opt OUT of the `--fps` frame-time pass because they
# are narrative / one-shot scenarios with no stable capture window - a fixed
# story that cannot loop to fill a window (unlike playable/scenario, which loop
# via loop_while_pending). They still run the clean + profiled CORRECTNESS
# passes; only frame-time measurement is skipped, and the report says so
# instead of timing out on a window the example can never fill. Add narrative
# examples here. Task 20260719-233732.
[package.metadata.nova_probe]
fps_exempt = ["broadside"]

# The example catalog (see autoexamples above). Blocks are listed in
# curriculum reading order within each category.
# sections/ - one example per ship section, the correctness curriculum.
[[example]]
name = "controller_section"
path = "examples/sections/controller_section.rs"

[[example]]
name = "thruster_section"
path = "examples/sections/thruster_section.rs"

[[example]]
name = "hull_section"
path = "examples/sections/hull_section.rs"

[[example]]
name = "turret_section"
path = "examples/sections/turret_section.rs"

[[example]]
name = "torpedo_section"
path = "examples/sections/torpedo_section.rs"

[[example]]
name = "torpedo_guidance"
path = "examples/sections/torpedo_guidance.rs"

[[example]]
name = "com_range"
path = "examples/sections/com_range.rs"

# gameplay/ - full autopilot scenario runs (the timeline/invariant-wired ones).
[[example]]
name = "scenario"
path = "examples/gameplay/scenario.rs"

[[example]]
name = "playable"
path = "examples/gameplay/playable.rs"

[[example]]
name = "broadside"
path = "examples/gameplay/broadside.rs"

# ui/ - staged UI flows with their own autopilot timelines.
[[example]]
name = "editor"
path = "examples/ui/editor.rs"

[[example]]
name = "hud_range"
path = "examples/ui/hud_range.rs"

[[example]]
name = "menu_newgame"
path = "examples/ui/menu_newgame.rs"

# screenshots/ - capture producers for the website (gen-web-screenshots.py).
[[example]]
name = "screenshot_reel"
path = "examples/screenshots/screenshot_reel.rs"

[[example]]
name = "screenshot_ui"
path = "examples/screenshots/screenshot_ui.rs"

[[example]]
name = "screenshot_combat"
path = "examples/screenshots/screenshot_combat.rs"

[[example]]
name = "screenshot_sections"
path = "examples/screenshots/screenshot_sections.rs"

[[example]]
name = "screenshot_juice"
path = "examples/screenshots/screenshot_juice.rs"

[[example]]
name = "screenshot_orbit"
path = "examples/screenshots/screenshot_orbit.rs"

[[example]]
name = "render_scale_shot"
path = "examples/screenshots/render_scale_shot.rs"

# perf/ - frame-time measurement scenes (probe run --fps).
[[example]]
name = "perf_baseline"
path = "examples/perf/perf_baseline.rs"

# Inherit the workspace clippy allows (type_complexity, too_many_arguments) for
# the root package too, so the lib, binary and examples match the crates' policy.
[lints]
workspace = true

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
nova_core = { path = "crates/nova_core" }

[dev-dependencies]
avian3d = { version = "0.7" }
bevy = { version = "0.19.0" }
# The perf_baseline example uses the frame-time capture harness, and the
# autopilot examples push run-timeline markers - both live in nova_probe (the
# run-harness dev tool, not shipped with the game binary). serde_json builds
# the markers' payloads (the timeline speaks JSON).
nova_probe = { path = "crates/nova_probe" }
serde_json = { version = "1" }
bevy_rand = { version = "0.15.0", default-features = false, features = ["chacha20", "wyrand"] }
rand = { version = "0.10.2" }
serde = { version = "1.0.228" }
bevy_enhanced_input = { version = "0.26.0" }
# The screenshot-reel example embeds and parses its scenario RON directly
# (examples/screenshots/data/reel.content.ron) instead of shipping it as a mod.
nova_modding = { path = "crates/nova_modding" }
ron = { version = "0.12" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
# Keep `cargo test`/`--all-targets` peak RAM down: cargo links one Bevy+avian binary per
# target (lib unittest + every example + doctests), and embedded DWARF makes each ~1.5 GB,
# so parallel rust-lld jobs can peak near 40 GB and swap-thrash a 32 GB box. Leaving DWARF
# in the .o files and keeping only line tables drops the peak to roughly half of RAM while
# preserving panic backtraces. See ../bevy-common-systems/docs/2026-07-03-test-memory.md.
split-debuginfo = "unpacked"
debug = "line-tables-only"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for the samply flamegraph pass (probe run --samply): full DWARF
# kept IN the binary so samply can symbolicate every frame of our code - the
# dev profile's line-tables-only + unpacked split (above) starves the
# symbolicator and leaves flamegraphs full of raw addresses. The RAM concern
# behind the dev settings is about linking MANY test/example binaries at once;
# this profile builds ONE example at a time, so a single fully-fat binary is
# affordable. Frame pointers (the other half of readable stacks) cannot be set
# in a cargo profile - the script passes -C force-frame-pointers=yes via
# RUSTFLAGS, which is also why this profile's cache only ever sees that flag.
[profile.profiling]
inherits = "dev"
debug = true
split-debuginfo = "off"

# Mirror the dev profile's dependency optimization explicitly (package
# overrides do not ride along with `inherits`).
[profile.profiling.package."*"]
opt-level = 3

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[build-dependencies]
embed-resource = "1"

[features]
debug = ["nova_core/debug", "bevy/track_location"]
dev = ["debug"]
# The PROFILED pass (probe run --profile): bevy's per-system spans are
# compiled in only under bevy/trace, and bevy/trace_chrome adds the chrome-
# trace writer (output path via the TRACE_CHROME env var). Tracing overhead
# contaminates frame times, so never combine a trace build with an FPS
# capture - two passes, one clean, one profiled.
trace = ["bevy/trace", "bevy/trace_chrome"]

[workspace.lints.rust]
# dead_code = "allow"
# unused_variables = "allow"
# unused_imports = "allow"

[workspace.lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

[workspace.package]
edition = "2021"
version = "0.7.0"
license = "MIT"

[workspace]
members = [
  "crates/nova_assets",
  "crates/nova_core",
  "crates/nova_debug",
  "crates/nova_editor",
  "crates/nova_events",
  "crates/nova_gameplay",
  "crates/nova_info",
  "crates/nova_menu",
  "crates/nova_mod_format",
  "crates/nova_modding",
  "crates/nova_probe",
  "crates/nova_scenario",
  "crates/nova_ui",
  # Web-build tooling, not game crates. `nova_meta_gen` stays a workspace
  # MEMBER (so Cargo's feature unification auto-pins its Bevy version AND
  # features - the `wav` feature via nova_modding -> nova_gameplay - to the
  # game's), but lives under tools/ and is EXCLUDED from default-members so a
  # bare `cargo build`/`test` skips the web-only tool. It is reached explicitly
  # by `cargo run -p nova_meta_gen` (Trunk post_build) and by CI's
  # `--workspace`. See tasks/20260718-152255/SPIKE.md (round 2).
  "tools/nova_meta_gen",
]
# The game: a bare `cargo build`/`test` at the repo root builds these and skips
# tools/. NOTE: this is an allowlist - a NEW game crate must be added here too,
# or a bare build silently skips it; CI stays on `--workspace` so nothing rots.
default-members = [
  ".",
  "crates/nova_assets",
  "crates/nova_core",
  "crates/nova_debug",
  "crates/nova_editor",
  "crates/nova_events",
  "crates/nova_gameplay",
  "crates/nova_info",
  "crates/nova_menu",
  "crates/nova_mod_format",
  "crates/nova_modding",
  "crates/nova_probe",
  "crates/nova_scenario",
  "crates/nova_ui",
]
resolver = "2"
