[package]
name = "nova_assets"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false
description = "Asset management for the Nova Protocol game"

[dependencies]
bevy = { version = "0.19.0" }
bevy_asset_loader = { version = "0.27.0" }
# The scenario_generation module serializes the code-built configs to RON. The
# needed Serialize derives (nova_scenario/serde) are already on via nova_modding.
ron = { version = "0.12" }
nova_gameplay = { path = "../nova_gameplay" }
nova_scenario = { path = "../nova_scenario" }
nova_modding = { path = "../nova_modding" }

# Cross-platform persistence of the enabled-mods set (task 20260714-174131).
# Native: a RON file under the user config dir. Web: window.localStorage.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }

[dev-dependencies]
avian3d = { version = "0.7" }
bevy_rand = { version = "0.15.0", default-features = false, features = [
    "wyrand",
] }
nova_events = { path = "../nova_events" }

[lints]
workspace = true

[features]
debug = ["bevy/track_location", "nova_gameplay/debug"]
