[package]
name = "nova_assets"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false
description = "Asset management for the Nova Protocol game"

[dependencies]
bevy = { version = "0.19.0" }
bevy_asset_loader = { version = "0.27.0" }
# The scenario_generation module serializes the code-built configs to RON. The
# needed Serialize derives (nova_scenario/serde) are already on via nova_modding.
ron = { version = "0.12" }
# The mod_cache InstalledModRecord derives its RON serde directly.
serde = { version = "1", features = ["derive"] }
# The portal client (task 20260715-163508): ehttp is the one HTTP surface for
# native (ureq worker thread) and wasm (browser fetch); serde_json decodes the
# portal's catalog.json; sha2 verifies each downloaded file (0.10 to share the
# workspace's existing pin with nova_portal_gen, which hashes the same files).
ehttp = { version = "0.7" }
serde_json = { version = "1" }
sha2 = { version = "0.10" }
# The `content` authoring CLI (task 20260717-212219) parses its gen/lint/audit
# subcommands with clap derive, like nova_meta_gen's generator CLI.
clap = { version = "4.5.48", features = ["derive"] }
nova_gameplay = { path = "../nova_gameplay" }
nova_scenario = { path = "../nova_scenario" }
nova_modding = { path = "../nova_modding" }
# The portal wire schema (PortalCatalog et al) - engine-free, shared verbatim
# with the generator.
nova_mod_format = { path = "../nova_mod_format" }

# Cross-platform persistence of the enabled-mods set (task 20260714-174131)
# and of the downloaded-mods cache (task 20260715-142906).
# Native: RON files under the user config/data dirs. Web: window.localStorage
# for the small sync stores, IndexedDB (hand-rolled web-sys wrapper in
# mod_cache) for the downloaded mods' file bytes.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "Event",
    "DomStringList",
    "IdbFactory",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbTransaction",
    "IdbTransactionMode",
    # The portal client derives its default base URL from window.location.
    "Location",
] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
avian3d = { version = "0.7" }
bevy_rand = { version = "0.15.0", default-features = false, features = [
    "wyrand",
] }
# gauntlet_race.rs drives the real scenario event bridge (EventHandler /
# GameEventsPlugin), matching nova_scenario's own dep pin.
bevy_common_systems = { git = "https://github.com/alexjercan/bevy-common-systems", tag = "v0.19.4" }
nova_events = { path = "../nova_events" }
# The portal e2e serves a real generated portal tree over localhost HTTP
# (tiny_http) built by the production generator (nova_portal_gen).
nova_portal_gen = { path = "../nova_portal_gen" }
tempfile = "3"
tiny_http = "0.12"

[lints]
workspace = true

[features]
debug = ["bevy/track_location", "nova_gameplay/debug"]
