[package]
name = "nova_core"
version = { workspace = true }
edition = { workspace = true }
description = "Core systems and modules for the Nova Protocol game"

[dependencies]
bevy = { version = "0.19.0" }
bevy_enhanced_input = { version = "0.26.0" }
nova_assets = { path = "../nova_assets" }
nova_debug = { path = "../nova_debug", optional = true }
nova_editor = { path = "../nova_editor" }
nova_gameplay = { path = "../nova_gameplay" }
nova_info = { path = "../nova_info" }
nova_scenario = { path = "../nova_scenario" }
nova_events = { path = "../nova_events" }

[lints]
workspace = true

[features]
debug = ["nova_debug", "bevy/track_location", "nova_editor/debug", "nova_gameplay/debug", "nova_info/debug"]
