[package]
name = "nova_debug"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false
description = "Debugging utilities for the Nova Protocol game"

[dependencies]
avian3d = { version = "0.7", features = ["diagnostic_ui"] }
bevy = { version = "0.19.0", features = ["track_location"] }
dirs = "6"
itertools = { version = "0.15.0" }
bevy_mod_debugdump = { version = "0.16" }
nova_gameplay = { path = "../nova_gameplay", features = ["debug"] }
nova_scenario = { path = "../nova_scenario" }
bevy_common_systems = { git = "https://github.com/alexjercan/bevy-common-systems", tag = "v0.19.0", features = ["debug"] }

# Wasm-only: the frame-time harness (`perf.rs`) reads its config from the URL
# query string in the browser (no process env there).
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Location"] }

[lints]
workspace = true
