[package]
name = "nova_events"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false
description = "Events for the Nova Protocol game"

[dependencies]
bevy = { version = "0.19.0" }
serde = { version = "1.0.228" }
bevy_common_systems = { git = "https://github.com/alexjercan/bevy-common-systems", rev = "4c8111750fd2f0a7b277e95fc53c048ec2187e07" }

[lints]
workspace = true

[features]
debug = ["bevy/track_location", "bevy_common_systems/debug"]
