[package]
name = "nova_events"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false
description = "Events for the Nova Protocol game"

[dependencies]
bevy = { version = "0.19.0" }
serde = { version = "1.0.228" }
bevy_common_systems = { git = "https://github.com/alexjercan/bevy-common-systems", tag = "v0.19.4" }

[lints]
workspace = true

[features]
debug = ["bevy/track_location", "bevy_common_systems/debug"]
