[package]
name = "nova_gameplay"
version = { workspace = true }
edition = { workspace = true }
description = "Gameplay systems and logic for the Nova Protocol game"

[dependencies]
avian3d = { version = "0.7" }
bevy = { version = "0.19.0" }
bevy_enhanced_input = { version = "0.26.0" }
rand = { version = "0.10.2" }
bevy_hanabi = { version = "0.19.0", default-features = false, features = ["2d", "3d"] }
serde = { version = "1.0.228" }
bevy_common_systems = { git = "https://github.com/alexjercan/bevy-common-systems", rev = "47548cd2230abf510528309779f5b13c74485ae0" }
bevy_rand = { version = "0.15.0", default-features = false, features = ["chacha20", "wyrand"] }
nova_events = { path = "../nova_events" }

[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
bevy_rand = { version = "0.15.0", features = ["wasm_js"] }

[lints]
workspace = true

[features]
debug = ["bevy/track_location", "bevy_common_systems/debug"]
