[package]
name = "nova_gameplay"
version = { workspace = true }
edition = { workspace = true }
description = "Gameplay systems and logic for the Nova Protocol game"

[dependencies]
avian3d = { version = "0.7" }
# `wav` enables bevy's WAV audio decoder so the shipped binary can play the
# placeholder sound effects under `assets/sounds/*.wav`. It is a normal (not
# dev-only) feature because the game itself decodes them at runtime; cargo
# unifies it across the workspace, so this single declaration covers every crate
# and example. Vorbis stays default-on, so `.ogg` swap-ins work with only a
# path-extension change.
bevy = { version = "0.19.0", features = ["wav"] }
bevy_enhanced_input = { version = "0.26.0" }
rand = { version = "0.10.2" }
bevy_hanabi = { version = "0.19.0", default-features = false, features = ["2d", "3d"] }
serde = { version = "1.0.228" }
bevy_common_systems = { git = "https://github.com/alexjercan/bevy-common-systems", rev = "34b3f0a7db44af4d9c363a5fb152ad2b3e81a887" }
bevy_rand = { version = "0.15.0", default-features = false, features = ["chacha20", "wyrand"] }
nova_events = { path = "../nova_events" }

[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
bevy_rand = { version = "0.15.0", features = ["wasm_js"] }

[lints]
workspace = true

[features]
debug = ["bevy/track_location", "bevy_common_systems/debug"]
