[package]
name = "nova_gameplay"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false
description = "Gameplay systems and logic for the Nova Protocol game"

[dependencies]
avian3d = { version = "0.7" }
# `wav` enables bevy's WAV audio decoder so the shipped binary can play the
# placeholder sound effects under `assets/sounds/*.wav`. It is a normal (not
# dev-only) feature because the game itself decodes them at runtime; cargo
# unifies it across the workspace, so this single declaration covers every crate
# and example. Vorbis stays default-on, so `.ogg` swap-ins work with only a
# path-extension change.
bevy = { version = "0.19.0", features = ["wav"] }
bevy_enhanced_input = { version = "0.26.0" }
rand = { version = "0.10.2" }
bevy_hanabi = { version = "0.19.0", default-features = false, features = ["2d", "3d"] }
serde = { version = "1", features = ["derive"], optional = true }
bevy_common_systems = { git = "https://github.com/alexjercan/bevy-common-systems", rev = "4c8111750fd2f0a7b277e95fc53c048ec2187e07" }
bevy_rand = { version = "0.15.0", default-features = false, features = ["chacha20", "wyrand"] }
# The interpolation crate behind avian's TransformInterpolation. Direct dep
# only for the easing-state components (avian re-exports the markers but not
# the states), which the turret spawn seeds so a bullet's first rendered
# frame sits on the render clock (task 20260711-121839). Version must stay
# in lockstep with the one avian3d resolves.
bevy_transform_interpolation = { version = "0.5.0" }
nova_events = { path = "../nova_events" }
nova_ui = { path = "../nova_ui" }

[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
bevy_rand = { version = "0.15.0", features = ["wasm_js"] }

[dev-dependencies]
# RON round-trip test for AssetRef's serde impls (behind the `serde` feature).
ron = { version = "0.12" }

[lints]
workspace = true

[features]
debug = ["bevy/track_location", "bevy_common_systems/debug"]
serde = ["dep:serde", "bevy/serialize"]
