[package]
name = "nova_meta_gen"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false
description = "Default `.meta` sidecar generator. Boots a headless, GPU-free Bevy app with the game's exact asset loaders and writes a default `.meta` next to every asset that lacks one, so `AssetMetaCheck::Always` never has to fetch a missing meta on the web. Run as a Trunk post_build hook against the staging dir. See docs/wasm-asset-meta-always-investigation.md."

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
# Default features pull in bevy_image/bevy_gltf/bevy_shader/bevy_audio (and thus
# their asset loaders). nova_modding supplies the three custom RON loaders
# (content/bundle/catalog.ron) AND, transitively via nova_gameplay, unifies the
# bevy `wav` feature into this crate's dependency subgraph so AudioLoader claims
# `.wav`. Without that unification `cargo run -p nova_meta_gen` would build bevy
# without wav and skip every `.wav` sidecar.
bevy = { version = "0.19.0" }
nova_modding = { path = "../nova_modding" }

[dev-dependencies]
tempfile = { version = "3" }

[lints]
workspace = true
