[package]
name = "nova_modding"
version = { workspace = true }
edition = { workspace = true }
description = "RON scenario/mod format and asset loader for the Nova Protocol game"

[dependencies]
bevy = { version = "0.19.0" }
ron = { version = "0.12" }
# nova_scenario carries the ScenarioConfig tree; the `serde` feature turns on its
# (and nova_gameplay's) Serialize/Deserialize derives, which the loader needs.
nova_scenario = { path = "../nova_scenario", features = ["serde"] }

[lints]
workspace = true
