[package]
name = "nova_modding"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false
description = "RON scenario/mod format and asset loader for the Nova Protocol game"

[dependencies]
bevy = { version = "0.19.0" }
# The pure serde format types (manifests, catalog declarations, portal wire
# schema) - engine-free so the portal generator shares them without bevy.
nova_mod_format = { path = "../nova_mod_format" }
ron = { version = "0.12" }
# The `Content` enum derives Serialize/Deserialize (it wraps the section/scenario
# config trees, whose derives come from the features enabled below).
serde = { version = "1", features = ["derive"] }
# nova_scenario carries the ScenarioConfig tree; the `serde` feature turns on its
# (and nova_gameplay's) Serialize/Deserialize derives, which the loader needs.
nova_scenario = { path = "../nova_scenario", features = ["serde"] }
# nova_gameplay carries the SectionConfig tree for the section catalog loader.
nova_gameplay = { path = "../nova_gameplay", features = ["serde"] }

[lints]
workspace = true
