[package]
name = "nova_perf"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false
description = "Frame-time capture and perf tooling for the Nova Protocol game (dev tools)"

[lib]
path = "src/lib.rs"

# The web/native frame-time capture binary. Lives here (not in the root package)
# so the root has a single bin and `cargo run` needs no `--bin`. Trunk builds it
# for wasm via perf.html; it runs natively too.
[[bin]]
name = "perf_web"
path = "src/bin/perf_web.rs"

[dependencies]
bevy = { version = "0.19.0" }
# The capture plugin reads GameStates / WeaponsHot / PlayerSpaceshipMarker and
# tops up Health (re-exported by nova_gameplay, so the bcs version stays unified).
nova_gameplay = { path = "../nova_gameplay" }
# The `perf_web` bin builds the real game app; it needs the full stack, but not
# the debug overlays (the harness is not debug-gated now that it lives here).
nova-protocol = { path = "../.." }

# Wasm-only: the harness reads its config from the URL query string in the
# browser (no process env there).
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Location"] }

[lints]
workspace = true
